# fitness-life

./: .env.example  .gitignore  README.md
apps/api/: migrate.py  migrate_calories.py  migrate_health_conditions.py  migrate_is_completed.py  migrate_raw.py  migrate_water_table.py  pyproject.toml
apps/api/app/: auth.py  db.py  limiter.py  main.py  models.py  schemas.py  security.py
apps/api/app/routers/: auth.py  catalog.py  chat.py  fitness.py
apps/api/migrations/: 2026-02-07_add_profile_name.sql  2026-03-02_security_rls_policies.sql  2026-03-02_verify_rls.sql
apps/web/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/public/images/: hero.avif  lading-hero.jfif  meals.jfif  more-meals.jfif  tracking.jfif
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/chat/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/goals/: page.tsx
apps/web/src/app/(app)/meals/: page.tsx
apps/web/src/app/(app)/onboarding/: page.tsx
apps/web/src/app/(app)/profile/: page.tsx
apps/web/src/app/(app)/workouts/: page.tsx
apps/web/src/app/(marketing)/: page.tsx
apps/web/src/app/(public)/: layout.tsx
apps/web/src/app/(public)/login/: page.tsx
apps/web/src/app/(public)/register/: page.tsx
apps/web/src/app/components/: ThemeToggle.tsx
apps/web/src/lib/: api.ts
docs/: SECURITY_SETUP.md
