[project]
name = "fitness-life-api"
version = "0.1.0"
description = "FastAPI backend for fitness-life"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
]

[tool.uvicorn]
factory = false
